src/mwlib/_uscan.cc
/* Generated by re2c 3.0 */
#line 1 "src/mwlib/_uscan.re"
// -*- mode: c++ -*-
// Copyright (c) 2007-2009 PediaPress GmbH
// See README.rst for additional licensing information.

#include <Python.h>

#include <iostream>
#include <assert.h>
#include <vector>

using namespace std;

#define RET(x) {found(x); return x;}

typedef enum {
    t_end,
    t_text,
    t_entity,
    t_special,
    t_magicword,
    t_comment,
    t_2box_open,   // [[
    t_2box_close,  // ]]
    t_http_url,
    t_break,
    t_begin_table,
    t_end_table,
    t_html_tag,
    t_singlequote,
    t_pre,
    t_section,
    t_section_end,
    t_item,
    t_colon,
    t_semicolon,
    t_hrule,
    t_newline,
    t_column,
    t_row,
    t_tablecaption,
    t_urllink,
    t_uniq,

    t_ebad,
} mwtok;

struct Token {
    int type;
    int start;
    int len;
};

class Scanner {
public:

    Scanner(Py_UCS4 *_start, Py_UCS4 *_end) {
        source = start = _start;
        end = _end;
        cursor = start;
        line_startswith_section = -1;
        tablemode = 0;
        last_ebad = false;
    }

    int found(mwtok val) {
        if (val == t_ebad) {
            last_ebad = true;
            return tokens.size() - 1;
        }

        if (val == t_text && tokens.size() && !last_ebad) {
            Token &previous_token(tokens[tokens.size() - 1]);
            if (previous_token.type == val) {
                previous_token.len += cursor - start;
                return tokens.size() - 1;
            }
        }

        last_ebad = false;

        Token t;
        t.type = val;
        t.start = (start - source);
        t.len = cursor - start;
        tokens.push_back(t);
        return tokens.size() - 1;
    }

    bool bol() {
        if ((start == source) || (start[-1] == '\n')) {
            memset(&lineflags, 0, sizeof(lineflags));
            return true;
        } else {
            return false;
        }
    }

    bool eol() const {
        return *cursor == '\n' || *cursor == 0;
    }

    void newline() {
        if (line_startswith_section >= 0) {
            tokens[line_startswith_section].type = t_text;
        }
        line_startswith_section = -1;
    }

    inline int scan();

    Py_UCS4 *source;

    Py_UCS4 *start;
    Py_UCS4 *cursor;
    Py_UCS4 *end;
    vector <Token> tokens;

    bool last_ebad;
    int line_startswith_section;
    int tablemode;
    struct {
        Py_UCS4 rowchar;
    } lineflags;
};


int Scanner::scan() {
    start = cursor;

    Py_UCS4 *marker = cursor;

    Py_UCS4 *save_cursor = cursor;


#define YYCTYPE         Py_UCS4
#define YYCURSOR        cursor
#define YYMARKER    marker
#define YYLIMIT   (end)
// #define YYFILL(n) return 0;

#line 143 "src/mwlib/_uscan.re"


/*
  the re2c manpage says:
  "The user must arrange for a sentinel token to appear at the end of input"
  \000 is our sentinel token.
*/

#line 184 "src/mwlib/_uscan.re"

    if (!bol()) {
        goto not_bol;
    }

#line 159 "src/mwlib/_uscan.cc"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;
	yych = *YYCURSOR;
	if (yych <= ',') {
		if (yych <= '!') {
			if (yych <= '\t') {
				if (yych >= '\t') goto yy3;
			} else {
				if (yych <= 0x001F) goto yy1;
				if (yych <= ' ') goto yy4;
				goto yy6;
			}
		} else {
			if (yych <= '#') {
				if (yych >= '#') goto yy8;
			} else {
				if (yych == '*') goto yy8;
			}
		}
	} else {
		if (yych <= '<') {
			if (yych <= '9') {
				if (yych <= '-') goto yy10;
			} else {
				if (yych <= ':') goto yy11;
				if (yych <= ';') goto yy8;
			}
		} else {
			if (yych <= 'z') {
				if (yych <= '=') goto yy12;
			} else {
				if (yych <= '{') goto yy14;
				if (yych <= '|') goto yy15;
			}
		}
	}
yy1:
	++YYCURSOR;
yy2:
#line 236 "src/mwlib/_uscan.re"
	{goto not_bol;}
#line 202 "src/mwlib/_uscan.cc"
yy3:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= '!') {
		if (yych == '\t') goto yy17;
		if (yych <= 0x001F) goto yy2;
		goto yy17;
	} else {
		if (yych <= ':') {
			if (yych <= '9') goto yy2;
			goto yy17;
		} else {
			if (yych <= 'z') goto yy2;
			if (yych <= '|') goto yy17;
			goto yy2;
		}
	}
yy4:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= '!') {
		if (yych == '\t') goto yy17;
		if (yych >= ' ') goto yy17;
	} else {
		if (yych <= ':') {
			if (yych >= ':') goto yy17;
		} else {
			if (yych <= 'z') goto yy5;
			if (yych <= '|') goto yy17;
		}
	}
yy5:
#line 228 "src/mwlib/_uscan.re"
	{RET(t_pre);}
#line 237 "src/mwlib/_uscan.cc"
yy6:
	++YYCURSOR;
yy7:
#line 204 "src/mwlib/_uscan.re"
	{
                    if (tablemode) {
                            lineflags.rowchar=cursor[-1];
                        RET(t_column);
                    }

                    if (*start==' ') {
                        cursor = start+1;
                        RET(t_pre);
                    }
                    RET(t_text);
                }
#line 254 "src/mwlib/_uscan.cc"
yy8:
	yych = *++YYCURSOR;
	if (yych <= ')') {
		if (yych == '#') goto yy8;
	} else {
		if (yych <= '*') goto yy8;
		if (yych <= '9') goto yy9;
		if (yych <= ';') goto yy8;
	}
yy9:
#line 233 "src/mwlib/_uscan.re"
	{RET(t_item);}
#line 267 "src/mwlib/_uscan.cc"
yy10:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == '-') goto yy21;
	goto yy2;
yy11:
	yyaccept = 2;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= '9') {
		if (yych <= '#') {
			if (yych <= '"') goto yy9;
			goto yy8;
		} else {
			if (yych == '*') goto yy8;
			goto yy9;
		}
	} else {
		if (yych <= ';') {
			if (yych <= ':') goto yy11;
			goto yy8;
		} else {
			if (yych == '{') goto yy20;
			goto yy9;
		}
	}
yy12:
	yych = *++YYCURSOR;
	if (yych <= 0x001F) {
		if (yych == '\t') goto yy22;
	} else {
		if (yych <= ' ') goto yy22;
		if (yych == '=') goto yy12;
	}
yy13:
#line 229 "src/mwlib/_uscan.re"
	{
			        line_startswith_section = found(t_section);
			        return t_section;
		        }
#line 307 "src/mwlib/_uscan.cc"
yy14:
	yych = *++YYCURSOR;
	if (yych == '|') goto yy23;
	goto yy2;
yy15:
	yych = *++YYCURSOR;
	if (yych <= ',') {
		if (yych == '+') goto yy24;
		goto yy7;
	} else {
		if (yych <= '-') goto yy25;
		if (yych == '}') goto yy26;
		goto yy7;
	}
yy16:
	yych = *++YYCURSOR;
yy17:
	if (yych <= '!') {
		if (yych <= '\t') {
			if (yych >= '\t') goto yy16;
		} else {
			if (yych <= 0x001F) goto yy18;
			if (yych <= ' ') goto yy16;
			goto yy6;
		}
	} else {
		if (yych <= 'z') {
			if (yych == ':') goto yy19;
		} else {
			if (yych <= '{') goto yy20;
			if (yych <= '|') goto yy15;
		}
	}
yy18:
	YYCURSOR = YYMARKER;
	if (yyaccept <= 1) {
		if (yyaccept == 0) {
			goto yy2;
		} else {
			goto yy5;
		}
	} else {
		goto yy9;
	}
yy19:
	yych = *++YYCURSOR;
	if (yych == ':') goto yy19;
	if (yych != '{') goto yy18;
yy20:
	yych = *++YYCURSOR;
	if (yych == '|') goto yy23;
	goto yy18;
yy21:
	yych = *++YYCURSOR;
	if (yych == '-') goto yy27;
	goto yy18;
yy22:
	yych = *++YYCURSOR;
	if (yych == '\t') goto yy22;
	if (yych == ' ') goto yy22;
	goto yy13;
yy23:
	++YYCURSOR;
#line 190 "src/mwlib/_uscan.re"
	{++tablemode; RET(t_begin_table);}
#line 373 "src/mwlib/_uscan.cc"
yy24:
	yych = *++YYCURSOR;
	if (yych == '+') goto yy24;
#line 218 "src/mwlib/_uscan.re"
	{
                    if (tablemode)
                        RET(t_tablecaption);
                    if (*start==' ') {
                        cursor = start+1;
                        RET(t_pre);
                    }
                    RET(t_text);
                }
#line 387 "src/mwlib/_uscan.cc"
yy25:
	yych = *++YYCURSOR;
	if (yych == '-') goto yy25;
#line 193 "src/mwlib/_uscan.re"
	{
                    if (tablemode)
                        RET(t_row);
                    if (*start==' ') {
                        cursor = start+1;
                        RET(t_pre);
                    }
                    RET(t_text);
                }
#line 401 "src/mwlib/_uscan.cc"
yy26:
	++YYCURSOR;
#line 191 "src/mwlib/_uscan.re"
	{if (--tablemode<0) tablemode=0; RET(t_end_table);}
#line 406 "src/mwlib/_uscan.cc"
yy27:
	yych = *++YYCURSOR;
	if (yych != '-') goto yy18;
yy28:
	yych = *++YYCURSOR;
	if (yych == '-') goto yy28;
#line 234 "src/mwlib/_uscan.re"
	{RET(t_hrule);}
#line 415 "src/mwlib/_uscan.cc"
}
#line 237 "src/mwlib/_uscan.re"



    not_bol:
    cursor = save_cursor;
    marker = cursor;


#line 426 "src/mwlib/_uscan.cc"
{
	YYCTYPE yych;
	unsigned int yyaccept = 0;
	yych = *YYCURSOR;
	if (yych <= ']') {
		if (yych <= '/') {
			if (yych <= ' ') {
				if (yych <= 0x0000) goto yy30;
				if (yych == '\n') goto yy33;
				goto yy31;
			} else {
				if (yych <= '%') {
					if (yych <= '!') goto yy35;
					goto yy31;
				} else {
					if (yych <= '&') goto yy36;
					if (yych <= '\'') goto yy37;
					goto yy31;
				}
			}
		} else {
			if (yych <= '=') {
				if (yych <= ':') {
					if (yych <= '9') goto yy38;
					goto yy41;
				} else {
					if (yych <= ';') goto yy31;
					if (yych <= '<') goto yy43;
					goto yy44;
				}
			} else {
				if (yych <= 'Z') {
					if (yych <= '@') goto yy31;
					goto yy38;
				} else {
					if (yych <= '[') goto yy46;
					if (yych <= '\\') goto yy31;
					goto yy47;
				}
			}
		}
	} else {
		if (yych <= 'l') {
			if (yych <= 'e') {
				if (yych == '_') goto yy48;
				if (yych <= '`') goto yy31;
				goto yy38;
			} else {
				if (yych <= 'g') {
					if (yych <= 'f') goto yy50;
					goto yy38;
				} else {
					if (yych <= 'h') goto yy51;
					if (yych <= 'i') goto yy52;
					goto yy38;
				}
			}
		} else {
			if (yych <= '|') {
				if (yych <= 'n') {
					if (yych <= 'm') goto yy53;
					goto yy54;
				} else {
					if (yych <= 'z') goto yy38;
					if (yych <= '{') goto yy31;
					goto yy55;
				}
			} else {
				if (yych <= 0x007F) {
					if (yych <= '~') goto yy31;
					goto yy56;
				} else {
					if (yych == 0xEBAD) goto yy57;
					goto yy31;
				}
			}
		}
	}
yy30:
	++YYCURSOR;
#line 315 "src/mwlib/_uscan.re"
	{newline(); return t_end;}
#line 509 "src/mwlib/_uscan.cc"
yy31:
	++YYCURSOR;
yy32:
#line 316 "src/mwlib/_uscan.re"
	{RET(t_text);}
#line 515 "src/mwlib/_uscan.cc"
yy33:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == '\n') goto yy58;
	if (yych == ' ') goto yy60;
yy34:
#line 288 "src/mwlib/_uscan.re"
	{newline(); RET(t_newline);}
#line 524 "src/mwlib/_uscan.cc"
yy35:
	yych = *++YYCURSOR;
	if (yych == '!') goto yy62;
	goto yy32;
yy36:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= '9') {
		if (yych == '#') goto yy63;
		if (yych <= '/') goto yy32;
		goto yy64;
	} else {
		if (yych <= 'Z') {
			if (yych <= '@') goto yy32;
			goto yy64;
		} else {
			if (yych <= '`') goto yy32;
			if (yych <= 'z') goto yy64;
			goto yy32;
		}
	}
yy37:
	yych = *++YYCURSOR;
	if (yych == '\'') goto yy65;
	goto yy32;
yy38:
	yych = *++YYCURSOR;
yy39:
	if (yych <= '@') {
		if (yych <= '/') goto yy40;
		if (yych <= '9') goto yy38;
	} else {
		if (yych <= 'Z') goto yy38;
		if (yych <= '`') goto yy40;
		if (yych <= 'z') goto yy38;
	}
yy40:
#line 261 "src/mwlib/_uscan.re"
	{RET(t_text);}
#line 564 "src/mwlib/_uscan.cc"
yy41:
	++YYCURSOR;
yy42:
#line 306 "src/mwlib/_uscan.re"
	{RET(t_special);}
#line 570 "src/mwlib/_uscan.cc"
yy43:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= '/') {
		if (yych == '!') goto yy66;
		if (yych <= '.') goto yy32;
		goto yy67;
	} else {
		if (yych <= 'Z') {
			if (yych <= '@') goto yy32;
			goto yy68;
		} else {
			if (yych <= '`') goto yy32;
			if (yych <= 'z') goto yy68;
			goto yy32;
		}
	}
yy44:
	yych = *++YYCURSOR;
	if (yych <= 0x001F) {
		if (yych == '\t') goto yy69;
	} else {
		if (yych <= ' ') goto yy69;
		if (yych == '=') goto yy44;
	}
yy45:
#line 265 "src/mwlib/_uscan.re"
	{
                    if (eol()) {
                        if (line_startswith_section>=0) {
                             line_startswith_section=-1;
                             RET(t_section_end);
                        } else {
                             RET(t_text);
                        }
                    } else {
                        RET(t_text);
                    }
    		    }
#line 610 "src/mwlib/_uscan.cc"
yy46:
	yyaccept = 2;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych <= 'f') {
		if (yych <= 'Z') {
			if (yych == '/') goto yy70;
			goto yy42;
		} else {
			if (yych <= '[') goto yy71;
			if (yych <= 'e') goto yy42;
			goto yy72;
		}
	} else {
		if (yych <= 'i') {
			if (yych <= 'g') goto yy42;
			if (yych <= 'h') goto yy73;
			goto yy74;
		} else {
			if (yych <= 'l') goto yy42;
			if (yych <= 'm') goto yy75;
			if (yych <= 'n') goto yy76;
			goto yy42;
		}
	}
yy47:
	yych = *++YYCURSOR;
	if (yych == ']') goto yy77;
	goto yy42;
yy48:
	yych = *++YYCURSOR;
	if (yych == '_') goto yy78;
yy49:
#line 262 "src/mwlib/_uscan.re"
	{RET(t_text);}
#line 645 "src/mwlib/_uscan.cc"
yy50:
	yych = *++YYCURSOR;
	if (yych == 't') goto yy79;
	goto yy39;
yy51:
	yych = *++YYCURSOR;
	if (yych == 't') goto yy80;
	goto yy39;
yy52:
	yych = *++YYCURSOR;
	if (yych == 'r') goto yy81;
	goto yy39;
yy53:
	yych = *++YYCURSOR;
	if (yych == 'a') goto yy82;
	goto yy39;
yy54:
	yych = *++YYCURSOR;
	if (yych == 'e') goto yy83;
	goto yy39;
yy55:
	yych = *++YYCURSOR;
	if (yych <= '*') {
		if (yych == '!') goto yy62;
		goto yy42;
	} else {
		if (yych <= '+') goto yy84;
		if (yych == '|') goto yy62;
		goto yy42;
	}
yy56:
	yyaccept = 1;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == 'U') goto yy85;
	goto yy32;
yy57:
	++YYCURSOR;
#line 245 "src/mwlib/_uscan.re"
	{RET(t_ebad);}
#line 685 "src/mwlib/_uscan.cc"
yy58:
	yyaccept = 3;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == '\n') goto yy58;
	if (yych == ' ') goto yy60;
yy59:
#line 278 "src/mwlib/_uscan.re"
	{
                    newline();
                    Py_UCS4 *tmp = cursor;

                    cursor = start+1;
                    found(t_newline);
                    start += 1;
                    cursor = tmp;
                    RET(t_break);
                }
#line 703 "src/mwlib/_uscan.cc"
yy60:
	yych = *++YYCURSOR;
	if (yych == '\n') goto yy58;
	if (yych == ' ') goto yy60;
yy61:
	YYCURSOR = YYMARKER;
	if (yyaccept <= 2) {
		if (yyaccept <= 1) {
			if (yyaccept == 0) {
				goto yy34;
			} else {
				goto yy32;
			}
		} else {
			goto yy42;
		}
	} else {
		if (yyaccept <= 4) {
			if (yyaccept == 3) {
				goto yy59;
			} else {
				goto yy49;
			}
		} else {
			goto yy40;
		}
	}
yy62:
	++YYCURSOR;
#line 290 "src/mwlib/_uscan.re"
	{
		            if (tablemode) {
		                if (cursor[-2]!='!' || cursor[-2]==lineflags.rowchar) {
			                RET(t_column);
			            }
		            }
		            cursor = start+1;
		            RET(t_special);
	            }
#line 743 "src/mwlib/_uscan.cc"
yy63:
	yych = *++YYCURSOR;
	if (yych <= 'W') {
		if (yych <= '/') goto yy61;
		if (yych <= '9') goto yy86;
		goto yy61;
	} else {
		if (yych <= 'X') goto yy87;
		if (yych == 'x') goto yy87;
		goto yy61;
	}
yy64:
	yych = *++YYCURSOR;
	if (yych <= ';') {
		if (yych <= '/') goto yy61;
		if (yych <= '9') goto yy64;
		if (yych <= ':') goto yy61;
		goto yy88;
	} else {
		if (yych <= 'Z') {
			if (yych <= '@') goto yy61;
			goto yy64;
		} else {
			if (yych <= '`') goto yy61;
			if (yych <= 'z') goto yy64;
			goto yy61;
		}
	}
yy65:
	yych = *++YYCURSOR;
	if (yych == '\'') goto yy65;
#line 307 "src/mwlib/_uscan.re"
	{RET(t_singlequote);}
#line 777 "src/mwlib/_uscan.cc"
yy66:
	yych = *++YYCURSOR;
	if (yych == '-') goto yy89;
	goto yy61;
yy67:
	yych = *++YYCURSOR;
	if (yych <= '@') goto yy61;
	if (yych <= 'Z') goto yy68;
	if (yych <= '`') goto yy61;
	if (yych >= '{') goto yy61;
yy68:
	yych = *++YYCURSOR;
	if (yych <= '<') {
		if (yych <= 0x0000) goto yy61;
		if (yych <= ';') goto yy68;
		goto yy61;
	} else {
		if (yych == '>') goto yy90;
		goto yy68;
	}
yy69:
	yych = *++YYCURSOR;
	if (yych == '\t') goto yy69;
	if (yych == ' ') goto yy69;
	goto yy45;
yy70:
	yych = *++YYCURSOR;
	if (yych == '/') goto yy91;
	goto yy61;
yy71:
	++YYCURSOR;
#line 263 "src/mwlib/_uscan.re"
	{RET(t_2box_open);}
#line 811 "src/mwlib/_uscan.cc"
yy72:
	yych = *++YYCURSOR;
	if (yych == 't') goto yy92;
	goto yy61;
yy73:
	yych = *++YYCURSOR;
	if (yych == 't') goto yy93;
	goto yy61;
yy74:
	yych = *++YYCURSOR;
	if (yych == 'r') goto yy94;
	goto yy61;
yy75:
	yych = *++YYCURSOR;
	if (yych == 'a') goto yy95;
	goto yy61;
yy76:
	yych = *++YYCURSOR;
	if (yych == 'e') goto yy96;
	goto yy61;
yy77:
	++YYCURSOR;
#line 264 "src/mwlib/_uscan.re"
	{RET(t_2box_close);}
#line 836 "src/mwlib/_uscan.cc"
yy78:
	yyaccept = 4;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
		case 'E': goto yy97;
		case 'F': goto yy98;
		case 'N': goto yy99;
		case 'S': goto yy100;
		case 'T': goto yy101;
		default: goto yy103;
	}
yy79:
	yych = *++YYCURSOR;
	if (yych == 'p') goto yy104;
	goto yy39;
yy80:
	yych = *++YYCURSOR;
	if (yych == 't') goto yy105;
	goto yy39;
yy81:
	yych = *++YYCURSOR;
	if (yych == 'c') goto yy106;
	goto yy39;
yy82:
	yych = *++YYCURSOR;
	if (yych == 'i') goto yy107;
	goto yy39;
yy83:
	yych = *++YYCURSOR;
	if (yych == 'w') goto yy108;
	goto yy39;
yy84:
	++YYCURSOR;
#line 300 "src/mwlib/_uscan.re"
	{
                    if (tablemode)
                        RET(t_tablecaption);
                    cursor = start+1;
                    RET(t_special);
	            }
#line 877 "src/mwlib/_uscan.cc"
yy85:
	yych = *++YYCURSOR;
	if (yych == 'N') goto yy109;
	goto yy61;
yy86:
	yych = *++YYCURSOR;
	if (yych <= '/') goto yy61;
	if (yych <= '9') goto yy86;
	if (yych == ';') goto yy88;
	goto yy61;
yy87:
	yych = *++YYCURSOR;
	if (yych == ';') goto yy61;
	goto yy111;
yy88:
	++YYCURSOR;
#line 313 "src/mwlib/_uscan.re"
	{RET(t_entity);}
#line 896 "src/mwlib/_uscan.cc"
yy89:
	yych = *++YYCURSOR;
	if (yych == '-') goto yy112;
	goto yy61;
yy90:
	++YYCURSOR;
#line 309 "src/mwlib/_uscan.re"
	{RET(t_html_tag);}
#line 905 "src/mwlib/_uscan.cc"
yy91:
	yych = *++YYCURSOR;
	if (yych <= '>') {
		if (yych <= '"') {
			if (yych == '!') goto yy113;
			goto yy61;
		} else {
			if (yych == '<') goto yy61;
			if (yych <= '=') goto yy113;
			goto yy61;
		}
	} else {
		if (yych <= '\\') {
			if (yych == '[') goto yy61;
			goto yy113;
		} else {
			if (yych <= ']') goto yy61;
			if (yych == 0x007F) goto yy61;
			goto yy113;
		}
	}
yy92:
	yych = *++YYCURSOR;
	if (yych == 'p') goto yy115;
	goto yy61;
yy93:
	yych = *++YYCURSOR;
	if (yych == 't') goto yy116;
	goto yy61;
yy94:
	yych = *++YYCURSOR;
	if (yych == 'c') goto yy117;
	goto yy61;
yy95:
	yych = *++YYCURSOR;
	if (yych == 'i') goto yy118;
	goto yy61;
yy96:
	yych = *++YYCURSOR;
	if (yych == 'w') goto yy119;
	goto yy61;
yy97:
	yych = *++YYCURSOR;
	if (yych == 'N') goto yy120;
	goto yy61;
yy98:
	yych = *++YYCURSOR;
	if (yych == 'O') goto yy121;
	goto yy61;
yy99:
	yych = *++YYCURSOR;
	if (yych <= 'N') {
		if (yych == 'E') goto yy122;
		goto yy61;
	} else {
		if (yych <= 'O') goto yy123;
		if (yych == 'U') goto yy124;
		goto yy61;
	}
yy100:
	yych = *++YYCURSOR;
	if (yych == 'T') goto yy125;
	goto yy61;
yy101:
	yych = *++YYCURSOR;
	if (yych == 'O') goto yy126;
	goto yy61;
yy102:
	yych = *++YYCURSOR;
yy103:
	if (yych == '_') goto yy102;
	goto yy49;
yy104:
	yyaccept = 5;
	yych = *(YYMARKER = ++YYCURSOR);
	if (yych == ':') goto yy127;
	goto yy39;
yy105:
